# welcomer-copilot

./: .gitignore  README.md  pyproject.toml
apps/custfacing/onboardings/: apps.py
apps/internal/orgs/: admin.py  api_v1.py  models.py  public_tenant.py
apps/internal/orgs/migrations/: 0001_initial.py
apps/internal/tenants/: apps.py
config/: urls.py
config/api/: v1.py
config/settings/: base.py  production.py
