[project]
name = "welcomer-copilot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-tenants>=3.9.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "markdown>=3.9",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
