[project]
name = "welcomer-copilot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "django-ninja>=1.4.3",
    "django-tenants>=3.9.0",
    "psycopg2>=2.9.10",
    "scalar-django-ninja",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.uv.sources]
scalar-django-ninja = { git = "https://github.com/scalar/scalar.git", subdirectory = "integrations/django-ninja" }
